@@ -39,10 +39,10 @@ typedef enum _field_type {
 
 enum corpus_type { UNDEF,    /* undefined status.                        */
                    SYSTEM,   /* system corpus, i.e. registered corpus    */
-		   SUB,      /* subcorpus which was generated by a query.*/
-		   TEMP,     /* temporary subcorpus, deleted after query */
-		   ALL
-		 };
+                   SUB,      /* subcorpus which was generated by a query.*/
+                   TEMP,     /* temporary subcorpus, deleted after query */
+                   ALL
+                 };
 
 typedef enum corpus_type CorpusType;
 
@@ -59,17 +59,17 @@ typedef struct _Range
 typedef struct cl {
   char            *name;         /* corpus name                                */
   char            *mother_name;  /* name of the original corpus.               */
-  int              mother_size;	 /* size (nr tokens) of mother                 */
+  int              mother_size;  /* size (nr tokens) of mother                 */
   char            *registry;     /* registry directory of the original corpus. */
-  char            *abs_fn;	 /* absolute file name                         */
+  char            *abs_fn;       /* absolute file name                         */
   enum corpus_type type;         /* type of the corpus.                        */
 
-  char            *local_dir;	 /* for unloaded subcorpora, this is the directory
-				    where the subcorpus is stored on disk; required
-				    for delayed loading (in ensure_corpus_size()) */
+  char            *local_dir;    /* for unloaded subcorpora, this is the directory
+                                    where the subcorpus is stored on disk; required
+                                    for delayed loading (in ensure_corpus_size()) */
 
   char            *query_corpus; /* name of the corpus the query was run on    */
-  char            *query_text;	 /* the query text proper                      */
+  char            *query_text;   /* the query text proper                      */
 
   Boolean          saved;        /* is the corpus saved (=stored on disk)?     */
   Boolean          loaded;       /* is the corpus loaded?                      */
@@ -79,13 +79,13 @@ typedef struct cl {
 
   Range           *range;        /* corpus intervals.                          */
   int              size;         /* number of intervals.                       */
-  int             *sortidx;	 /* sorting index for intervals                */
-  int             *targets;	 /* list of targets                            */
-  int             *keywords;	 /* one keyword, for each concordance line     */
+  int             *sortidx;      /* sorting index for intervals                */
+  int             *targets;      /* list of targets                            */
+  int             *keywords;     /* one keyword, for each concordance line     */
 
-  ContextDescriptor *cd;	/* additional attributes to print. only 
-				 * for ``SYSTEM'' corpora
-				 */
+  ContextDescriptor *cd;        /* additional attributes to print. only 
+                                 * for ``SYSTEM'' corpora
+                                 */
 
   struct cl       *next;
 } CorpusList;
@@ -135,8 +135,8 @@ void dropcorpus(CorpusList *cl);
  */
 
 CorpusList *duplicate_corpus(CorpusList *cl,
-			     char *new_name,
-			     Boolean force_overwrite);
+                             char *new_name,
+                             Boolean force_overwrite);
 
 /* make_temp_corpus makes a copy of the corpus in *cl
  * into a corpus of type "TEMP" with name "new_name".
@@ -145,7 +145,7 @@ CorpusList *duplicate_corpus(CorpusList *cl,
  */
 
 CorpusList *make_temp_corpus(CorpusList *cl,
-			     char *new_name);
+                             char *new_name);
 
 /* assign_temp_to_sub assigns the temporary corpus in *tmp
  * to a "real" subcorpus with name "subname". If such a 
