@@ -27,6 +27,10 @@ New features:
  - For s-attributes with annotated values, cwb-s-decode can optionally suppress either the annotated
    strings (-v) or the start and end positions of regions (-n).
 
+ - Registry path list (in CORPUS_REGISTRY variable and -r options) may contain optional registry directories
+   indicated by a leading '?' character.  If these are not mounted, CQP will not issue warning messages; if
+   they are mounted, all tools should ignore the '?' in the pathname.
+
 Bug fixes:
 
  - [2008-01-03] Fixed a strange bug in which the query
